--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
   },
   "author": "",
   "type": "module",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "z3-solver": "^4.12.4"
+  }
 }
